Adding panel mapping

--- a/DestinationElevatorAcs/App.config
+++ b/DestinationElevatorAcs/App.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <section name="readersMapping" type="DestinationElevatorAcs.ReadersMapping, DestinationElevatorAcs" />
+  </configSections>
   <system.serviceModel>
     <bindings>
       <netTcpBinding>
@@ -42,8 +45,33 @@
     <add key="ElipConnectionRetryTimeout" value="5" />
     <add key="ElipIdleTimeMsec" value="100" />
     <add key="ElipReadBufferSize" value="4096" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
+  <readersMapping>
+    <add readerId="0" panelId="10" />
+    <add readerId="1" panelId="11" />
+    <add readerId="2" panelId="12" />
+    <add readerId="3" panelId="13" />
+    <add readerId="4" panelId="14" />
+    <add readerId="5" panelId="15" />
+    <add readerId="6" panelId="16" />
+    <add readerId="7" panelId="17" />
+    <add readerId="8" panelId="18" />
+    <add readerId="9" panelId="19" />
+  </readersMapping>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
+  <system.web>
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+      </providers>
+    </roleManager>
+  </system.web>
 </configuration>
